--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -26,7 +26,7 @@ jobs:
         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
         AWS_REGION: us-east-1
 
-    - name: Build, test, tag, and push image to Amazon ECR
+    - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY_DB: my_db
@@ -37,18 +37,6 @@ jobs:
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY_APP:$IMAGE_TAG -f Dockerfile .
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY_DB:$IMAGE_TAG -f Dockerfile_mysql .
-        # Unit test
-        docker run -d -e MYSQL_ROOT_PASSWORD=pw  $ECR_REGISTRY/$ECR_REPOSITORY_DB:$IMAGE_TAG
-        export DBHOST=127.0.0.1
-        export DBPORT=3306
-        export DBUSER=root
-        export DATABASE=employees
-        export DBPWD=pw
-        export APP_COLOR=blue
-        docker run -d -p 80:8080  -e DBHOST=$DBHOST -e DBPORT=$DBPORT -e  DBUSER=$DBUSER -e DBPWD=$DBPWD  $ECR_REGISTRY/$ECR_REPOSITORY_APP:$IMAGE_TAG
-        docker ps
-        echo "Pause for 10 seconds to let container start"
-        sleep 10
-        curl localhost -vvv
+        
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_DB:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_APP:$IMAGE_TAG
