--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -31,12 +31,13 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY_DB: my_db
         ECR_REPOSITORY_APP: my_app
-        IMAGE_TAG: v2
+        IMAGE_TAG: v1
       run: |
         ls -ltra
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY_APP:$IMAGE_TAG -f Dockerfile .
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY_DB:$IMAGE_TAG -f Dockerfile_mysql .
         
+        # Docker push
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_DB:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_APP:$IMAGE_TAG
