--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -31,7 +31,7 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY_DB: my_db
         ECR_REPOSITORY_APP: my_app
-        IMAGE_TAG: latest
+        IMAGE_TAG: vlatest
       run: |
         ls -ltra
         # Docker build
