--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY_DB: my_db
-        ECR_REPOSITORY_APP: my_app
-        IMAGE_TAG: final
+        ECR_REPOSITORY_DB: mysql
+        ECR_REPOSITORY_APP: web
+        IMAGE_TAG: 2.0
       run: |
         ls -ltra
         # Docker build
