--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -31,7 +31,7 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY_DB: mysql
         ECR_REPOSITORY_APP: web
-        IMAGE_TAG: latest
+        IMAGE_TAG: 2
       run: |
         ls -ltra
         # Docker build
